Rename dscheduler/dworker to dask-scheduler/dask-worker (#46)
* rename dscheduler/dworker to dask-scheduler/dask-worker

* upgrade anaconda versions and installing dask/distributed from conda-forge

* fix tests

--- a/ci/Dockerfile
+++ b/ci/Dockerfile
@@ -1,6 +1,11 @@
 FROM ubuntu:14.04
 
-RUN apt-get update && apt-get install -y curl openssh-server python-dev libffi-dev libssl-dev
+RUN locale-gen en_US.UTF-8
+ENV LANG en_US.UTF-8
+ENV LANGUAGE en_US:en
+ENV LC_ALL en_US.UTF-8
+
+RUN apt-get update && apt-get install -y curl openssh-server python-dev libffi-dev libssl-dev git
 
 RUN mkdir /var/run/sshd
 RUN echo 'root:root' |chpasswd
