--- a/.travis.yml
+++ b/.travis.yml
@@ -11,30 +11,17 @@ notifications:
 services:
   - docker
 
-env:
-  DOCKER_COMPOSE_VERSION: 1.6.0
-
 addons:
   hosts:
     - ci_head_1
     - ci_compute_1
 
 before_install:
-  - sudo apt-get -qq update
-  - sudo apt-get install -y --force-yes -o Dpkg::Options::="--force-confdef" -o Dpkg::Options::="--force-confold" docker-engine
-  - sudo service docker stop
-  - sudo service docker start
-
   # Download vagrant insecurekey
   - mkdir -p ~/.vagrant.d/
   - wget https://raw.githubusercontent.com/mitchellh/vagrant/master/keys/vagrant -O ~/.vagrant.d/insecure_private_key
   - chmod 600 ~/.vagrant.d/insecure_private_key
 
-  # Setup docker compose
-  - sudo rm /usr/local/bin/docker-compose
-  - curl -L https://github.com/docker/compose/releases/download/${DOCKER_COMPOSE_VERSION}/docker-compose-`uname -s`-`uname -m` > docker-compose
-  - chmod +x docker-compose
-  - sudo mv docker-compose /usr/local/bin
   # Start docker containers
   - docker version
   - docker-compose version
@@ -47,7 +34,7 @@ before_install:
   - export TEST_CLUSTERFILE=$(pwd)/ci/cluster_docker.yaml
 
   # Install conda
-  - wget http://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh
+  - wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh
   - bash miniconda.sh -b -p $HOME/miniconda
   - export PATH="$HOME/miniconda/bin:$PATH"
   - conda config --set always_yes yes --set changeps1 no
