changes for vpc and subnet

--- a/dask_ec2/formulas/salt/dask/distributed/templates/dask-worker.conf
+++ b/dask_ec2/formulas/salt/dask/distributed/templates/dask-worker.conf
@@ -1,5 +1,5 @@
 {%- from 'conda/settings.sls' import install_prefix with context -%}
-{%- from 'dask/distributed/settings.sls' import scheduler_host, nprocs with context -%}
+{%- from 'dask/distributed/settings.sls' import scheduler_public_ip, nprocs with context -%}
 
 {%- set environment = [] -%}
 {%- do environment.append('LC_ALL="C.UTF-8"') -%}
@@ -7,7 +7,7 @@
 {%- do environment.append('PATH="' ~ install_prefix ~ '/bin:%(ENV_PATH)s"') -%}
 
 [program:dask-worker]
-command={{ install_prefix }}/bin/python {{ install_prefix }}/bin/dask-worker {{ scheduler_host }}:8786 --nprocs {{nprocs}}
+command={{ install_prefix }}/bin/python {{ install_prefix }}/bin/dask-worker {{ scheduler_public_ip }}:8786 --nprocs {{nprocs}}
 startsecs=1
 numprocs=1
 autostart=false
